--- a/portfolio/templates/pages/contact.html
+++ b/portfolio/templates/pages/contact.html
@@ -57,7 +57,7 @@
                     </div>
                     
                     <h3 class="h5 mb-3">Availability</h3>
-                    <p class="mb-0">I'm currently available for freelance work and exciting projects. Feel free to reach out!</p>
+                    <p class="mb-0">I'm currently available for freelance work and exciting projects. Feel free to reach out!!</p>
                 </div>
             </div>
         </div>
